--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,41 +3,35 @@ services:
     image: mongo
     container_name: database
     ports:
-      - 27017:27017
+      - "27017:27017"
+    env_file:
+      - .env
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: admin
-
-  mongo-express:
-    image: mongo-express
-    container_name: database-gui
-    ports:
-      - 8081:8081
-    environment:
-      ME_CONFIG_MONGODB_URL: mongodb://admin:admin@mongo:27017/
-      ME_CONFIG_BASICAUTH_USERNAME: admin
-      ME_CONFIG_BASICAUTH_PASSWORD: admin
-    depends_on:
-      - mongo
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASS}
 
   backend:
-    build: ./backend
+    image: mdzihad22/voting-backend:${IMAGE_TAG}
     container_name: backend
     ports:
-      - 3001:3001
+      - "${BACKEND_PORT}:${BACKEND_PORT}"
+    env_file:
+      - .env
     environment:
-      MONGODB_URI: mongodb://admin:admin@mongo:27017/bangladesh-voting?authSource=admin
-      NODE_ENV: production
-      FRONTEND_URL: http://localhost
-      JWT_SECRET: A7+eejrYnPiUTAFHRnZAol6M+oxJ71c1aR6BNl9IrKobMXfCtorNcycggCtNuAMlMgHoCSaOBEPbE6d0+u1usA==
-      PORT: 3001
+      MONGODB_URI: ${MONGODB_URI}
+      NODE_ENV: ${NODE_ENV}
+      FRONTEND_URL: ${FRONTEND_URL}
+      JWT_SECRET: ${JWT_SECRET}
+      PORT: ${BACKEND_PORT}
     depends_on:
       - mongo
 
   frontend:
-    build: ./frontend
+    image: mdzihad22/ngi-front:${IMAGE_TAG}
     container_name: frontend
     ports:
-      - 80:80
+      - "80:80"
+    env_file:
+      - .env
     depends_on:
       - backend
