--- a/.github/workflows/flows.yaml
+++ b/.github/workflows/flows.yaml
@@ -85,7 +85,6 @@ jobs:
             #Deploy using updated compose file
             docker compose pull
             docker compose up -d
-            docker exec -it backend sh
-            node seed.js
+            docker exec backend node seed.js
 
             echo "Deployment complete!"
